--- a/index.html
+++ b/index.html
@@ -2,11 +2,34 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
-  
+  <header class="header">
+    <div class="header-content">
+      <img src="images/logo.png" alt="logo" width="65px" />
+      <nav>
+        <ul class="menu-list">
+          <li class="menu-item">
+            <a href="#contacts">Контакти</a>
+          </li>
+          <li class="menu-item">
+            <a href="#">Головна</a>
+          </li>
+          <li class="menu-item">
+            <a href="#what-we-works">З чим працюємо</a>
+          </li>
+          <li class="menu-item">
+            <a href="#">підтримати фонд</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="main">
+  </main>
+  <footer class="footer"></footer>
 </body>
 </html>
