--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="header">
     <div class="header-content">
-      <img src="images/logo.png" alt="logo" width="65px" />
+      <img class="logo" src="./images/logo.png" alt="logo" width="65px" />
       <nav>
         <ul class="menu-list">
           <li class="menu-item">
@@ -21,7 +21,7 @@
           <li class="menu-item">
             <a href="#what-we-works">З чим працюємо</a>
           </li>
-          <li class="menu-item">
+          <li class="menu-item buttons">
             <a href="#">підтримати фонд</a>
           </li>
         </ul>
@@ -29,6 +29,14 @@
     </div>
   </header>
   <main class="main">
+    <section class="section-hero">
+      <div class="hero-content">
+        <h1 class="hero-title">фонд підтримки постраждалих від війни</h1>
+        <p class="hero-description">Ми хочемо допомогти кожному, хто постраждав під час війни</p>
+        <a href="#" class="hero-button buttons">підтримати фонд</a>
+      </div>
+    </section>
+
   </main>
   <footer class="footer"></footer>
 </body>
