--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
         <a href="#" class="hero-button buttons">підтримати фонд</a>
       </div>
     </section>
+    <section class="section-description">
+      <div class="description-content">
+        <h2 class="description-title">ми – фонд підтримки постраждалих від війни</h2>
+        <p class="description-subtitle">Наша мета – психологічна та гуманітарна допомога українцям</p>
+        <p class="description-note">Кожен, хто звернеться, отримає допомогу, яка у наших силах</p>
+      </div>
+    </section>
 
+    
   </main>
   <footer class="footer"></footer>
 </body>
