what we works section

--- a/index.html
+++ b/index.html
@@ -1,51 +1,94 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link rel="stylesheet" href="./css/style.css" />
-</head>
-<body>
-  <header class="header">
-    <div class="header-content">
-      <img class="logo" src="./images/logo.png" alt="logo" width="65px" />
-      <nav>
-        <ul class="menu-list">
-          <li class="menu-item">
-            <a href="#contacts">Контакти</a>
-          </li>
-          <li class="menu-item">
-            <a href="#">Головна</a>
-          </li>
-          <li class="menu-item">
-            <a href="#what-we-works">З чим працюємо</a>
-          </li>
-          <li class="menu-item buttons">
-            <a href="#">підтримати фонд</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <main class="main">
-    <section class="section-hero">
-      <div class="hero-content">
-        <h1 class="hero-title">фонд підтримки постраждалих від війни</h1>
-        <p class="hero-description">Ми хочемо допомогти кожному, хто постраждав під час війни</p>
-        <a href="#" class="hero-button buttons">підтримати фонд</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="header-content">
+        <img class="logo" src="./images/logo.png" alt="logo" width="65px" />
+        <nav>
+          <ul class="menu-list">
+            <li class="menu-item">
+              <a href="#contacts">Контакти</a>
+            </li>
+            <li class="menu-item">
+              <a href="#">Головна</a>
+            </li>
+            <li class="menu-item">
+              <a href="#what-we-works">З чим працюємо</a>
+            </li>
+            <li class="menu-item buttons">
+              <a href="#">підтримати фонд</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-    </section>
-    <section class="section-description">
-      <div class="description-content">
-        <h2 class="description-title">ми – фонд підтримки постраждалих від війни</h2>
-        <p class="description-subtitle">Наша мета – психологічна та гуманітарна допомога українцям</p>
-        <p class="description-note">Кожен, хто звернеться, отримає допомогу, яка у наших силах</p>
-      </div>
-    </section>
+    </header>
+    <main class="main">
+      <section class="section-hero">
+        <div class="hero-content">
+          <h1 class="hero-title">фонд підтримки постраждалих від війни</h1>
+          <p class="hero-description">
+            Ми хочемо допомогти кожному, хто постраждав під час війни
+          </p>
+          <a href="#" class="hero-button buttons">підтримати фонд</a>
+        </div>
+      </section>
+      <section class="section-description">
+        <div class="description-content">
+          <h2 class="description-title">
+            ми – фонд підтримки постраждалих від війни
+          </h2>
+          <p class="description-subtitle">
+            Наша мета – психологічна та гуманітарна допомога українцям
+          </p>
+          <p class="description-note">
+            Кожен, хто звернеться, отримає допомогу, яка у наших силах
+          </p>
+        </div>
+      </section>
 
-    
-  </main>
-  <footer class="footer"></footer>
-</body>
+      <section class="section-what-we-works" id="what-we-works">
+        <div class="what-we-works_container">
+          <article class="what-we-works_content">
+            <div class="what-we-works_text">
+              <h3 class="what-we-works_title">реабілітаційний центр</h3>
+              <p class="what-we-works_description">
+                Ми допомагаємо людям, які постраждали знайти правильне
+                лікування. У нашому фонді є чотири напрями: фізичної та
+                реабілітаційної медицини, терапевтичне, неврологічне та
+                хірургічне. Ми маємо заклади-партнери, де швидко та якісно
+                можуть надати допомогу.
+              </p>
+            </div>
+            <img class="what-we-works_image" src="./images/man.jpg" alt="man" />
+          </article>
+
+          <article class="what-we-works_content">
+            <div class="what-we-works_text">
+              <h3 class="what-we-works_title">робота з дітьми</h3>
+              <p class="what-we-works_description">
+                Діти – найвразливіша частина суспільства, і їм особливо потрібна
+                підтримка дорослих. Тому наш фонд збирає речі для дітей,
+                проводить літні й зимові табори, майстер-класи та за потреби –
+                дитячих прсихотерапевтів
+              </p>
+            </div>
+            <img
+              class="what-we-works_image"
+              src="./images/children-working.jpg"
+              alt="children-working"
+            />
+          </article>
+
+          <a href="#" class="what-we-works_button buttons">дізнатися більше</a>
+        </div>
+      </section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
