our mission section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-content">
+      <div class="header_content">
         <img class="logo" src="./images/logo.png" alt="logo" width="65px" />
         <nav>
           <ul class="menu-list">
@@ -30,23 +30,23 @@
     </header>
     <main class="main">
       <section class="section-hero">
-        <div class="hero-content">
-          <h1 class="hero-title">фонд підтримки постраждалих від війни</h1>
-          <p class="hero-description">
+        <div class="hero_content">
+          <h1 class="hero_title">фонд підтримки постраждалих від війни</h1>
+          <p class="hero_description">
             Ми хочемо допомогти кожному, хто постраждав під час війни
           </p>
-          <a href="#" class="hero-button buttons">підтримати фонд</a>
+          <a href="#" class="hero_button buttons">підтримати фонд</a>
         </div>
       </section>
       <section class="section-description">
-        <div class="description-content">
-          <h2 class="description-title">
+        <div class="description_content">
+          <h2 class="description_title">
             ми – фонд підтримки постраждалих від війни
           </h2>
-          <p class="description-subtitle">
+          <p class="description_subtitle">
             Наша мета – психологічна та гуманітарна допомога українцям
           </p>
-          <p class="description-note">
+          <p class="description_note">
             Кожен, хто звернеться, отримає допомогу, яка у наших силах
           </p>
         </div>
@@ -86,6 +86,18 @@
           </article>
 
           <a href="#" class="what-we-works_button buttons">дізнатися більше</a>
+        </div>
+      </section>
+
+      <section class="section-our-mission">
+        <div class="our-mission_container">
+          <div class="our-mission_content">
+            <p class="our-mission_text">
+              Наша місія – щоб кожен українець мав можливість отримати допомогу
+              й не залишився наодинці зі своїми проблемами
+            </p>
+            <img class="our-mission_image" src="./images/children.png" alt="children" />
+          </div>
         </div>
       </section>
     </main>
