--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p class="description_subtitle">
             Наша мета – психологічна та гуманітарна допомога українцям
           </p>
-          <p class="description_note">
+          <p class="description_text">
             Кожен, хто звернеться, отримає допомогу, яка у наших силах
           </p>
         </div>
@@ -100,7 +100,28 @@
           </div>
         </div>
       </section>
+
+      <section class="section-sponsorship" id="contacts">
+        <div class="sponsorship-text_container">
+          <h2 class="sponsorship-text_title">підтримайте нашу роботу!</h2>
+          <p class="sponsorship-text">Усі ваші донати йдуть саме на роботу фонду, заробітні плати ми виплачуємо з коштів грантодавців</p>
+        </div>
+
+        <div class="sponsorship-money_container">
+          <h3 class="sponsorship-money_title">Наша мета 10 000 000 гривень!</h3>
+          <ul class="sponsorship-money_counter">
+            <li class="counter_numbers">00</li>
+            <li class="counter_separator"></li>
+            <li class="counter_numbers">230</li>
+            <li class="counter_separator"></li>
+            <li class="counter_numbers">025</li>
+          </ul>
+        </div>
+
+        <a href="#" class="sponsorship_button buttons">дізнатися більше</a>
+      </section>
+      
+      <section class="section-contacts"></section>
     </main>
-    <footer class="footer"></footer>
   </body>
 </html>
