--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <body>
     <header class="header">
       <div class="header_content">
-        <img class="logo" src="./images/logo.png" alt="logo" width="65px" />
+        <img
+          class="logo icons"
+          src="./images/logo.png"
+          alt="logo"
+          width="65px"
+        />
         <nav>
           <ul class="menu-list">
             <li class="menu-item">
@@ -96,15 +101,22 @@
               Наша місія – щоб кожен українець мав можливість отримати допомогу
               й не залишився наодинці зі своїми проблемами
             </p>
-            <img class="our-mission_image" src="./images/children.png" alt="children" />
+            <img
+              class="our-mission_image"
+              src="./images/children.png"
+              alt="children"
+            />
           </div>
         </div>
       </section>
 
-      <section class="section-sponsorship" id="contacts">
+      <section class="section-sponsorship">
         <div class="sponsorship-text_container">
           <h2 class="sponsorship-text_title">підтримайте нашу роботу!</h2>
-          <p class="sponsorship-text">Усі ваші донати йдуть саме на роботу фонду, заробітні плати ми виплачуємо з коштів грантодавців</p>
+          <p class="sponsorship-text">
+            Усі ваші донати йдуть саме на роботу фонду, заробітні плати ми
+            виплачуємо з коштів грантодавців
+          </p>
         </div>
 
         <div class="sponsorship-money_container">
@@ -120,8 +132,47 @@
 
         <a href="#" class="sponsorship_button buttons">дізнатися більше</a>
       </section>
-      
-      <section class="section-contacts"></section>
+
+      <section class="section-contacts" id="contacts">
+        <div class="contacts_header">
+          <h2 class="contacts_title">контакти</h2>
+          <div class="contacts-header_content">
+            <article class="phone-info">
+              <a href="#"><img class="icons" src="./images/phone-icon.png" alt="Phone" width="34px" /></a>
+              <p class="contacts-header_description">
+                Якщо у вас виникають питання – телефонуйте за номером
+                <a href="tel:0-987-654-321">0-987-654-321</a>
+              </p>
+            </article>
+
+            <article class="social-info">
+              <ul class="social-info_icons">
+                <li>
+                  <a href="#"><img class="icons" src="./images/telegram-icon.png" alt="Telegram" width="34px" /></a>
+                </li>
+                <li>
+                  <a href="#"><img class="icons" src="./images/whatsapp-icon.png" alt="WhatsApp" width="34px" /></a>
+                </li>
+              </ul>
+              <p class="contacts-header_description">
+                Або пишіть нам у чат-бот
+              </p>
+            </article>
+          </div>
+        </div>
+
+        <div class="contacts_body">
+          <img class="contacts_image" src="./images/email.png" alt="E-mail" />
+          <div class="contacts-form_container">
+            <p class="form-description">Щоб дізнаватися усі новини фестивалю, підпишися на нашу розсилку</p>
+            <form class="mail-form" action="/" method="post">
+              <input type="text" placeholder="Ім'я" required />
+              <input type="email" placeholder="Емейл" required />
+              <button class="input-form_button buttons" type="submit">підписатися</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
